--- a/index.html
+++ b/index.html
@@ -14,7 +14,173 @@
     />
   </head>
   <body>
-    <header></header>
+    <!-- header start  -->
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="#"
+            ><img src="images/logo.png" alt=""
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <form class="d-flex ms-auto">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-success" type="submit">
+                Search
+              </button>
+            </form>
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Product</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- carosel slider added here  -->
+      <section class="container my-5">
+        <div
+          id="carouselExampleControls"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner p-5 " style="background: #FCEAE9;">
+            <div class="carousel-item active">
+              <div class="row d-flex align-items-center">
+                <div
+                  class="
+                    col-lg-7
+                    d-flex
+                    flex-column
+                    justify-content-around
+                    align-items-start
+                  "
+                >
+                  <h1>Mi LED TV 4A PRO 32</h1>
+                  <p>
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                    do amet sint. Velit officia consequat duis enim velit
+                    mollit. Exercitation veniam consequat sunt nostrud amet.
+                  </p>
+                  <h1 class="text-danger">$1289</h1>
+                  <a href="#" class="btn btn-info">Buy Now</a>
+                </div>
+                <div class="col-lg-5">
+                  <img
+                    src="images/banner-images/tv.png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row d-flex align-items-center">
+                <div
+                  class="
+                    col-lg-7
+                    d-flex
+                    flex-column
+                    justify-content-around
+                    align-items-start
+                  "
+                >
+                  <h1>Cool Dude Headphone</h1>
+                  <p>
+                    This is the best headphone in the world for people who just
+                    want to waste time in front of funky world.
+                  </p>
+                  <h1 class="text-danger">$420</h1>
+                  <a href="#" class="btn btn-info">Buy Now</a>
+                </div>
+                <div class="col-lg-5">
+                  <img
+                    src="images/banner-images/headphone.png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row d-flex align-items-center">
+                <div
+                  class="
+                    col-lg-7
+                    d-flex
+                    flex-column
+                    justify-content-around
+                    align-items-start
+                  "
+                >
+                  <h1>X-Box for your living room</h1>
+                  <p>
+                    This is the best x-box in the world for people who just want
+                    to waste time in front of fake sports.
+                  </p>
+                  <h1 class="text-danger">$689</h1>
+                  <a href="#" class="btn btn-info">Buy Now</a>
+                </div>
+                <div class="col-lg-5">
+                  <img
+                    src="images/banner-images/xbox.png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+
+        <!-- ....................................end carousel 
+        
+        .......................................-->
+      </section>
+    </header>
+    <!-- header end  -->
     <main></main>
     <footer></footer>
     <!-- bootstrap javascript added  -->
