--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           class="carousel slide"
           data-bs-ride="carousel"
         >
-          <div class="carousel-inner p-5 " style="background: #FCEAE9;">
+          <div class="carousel-inner p-5" style="background: #fceae9">
             <div class="carousel-item active">
               <div class="row d-flex align-items-center">
                 <div
@@ -181,7 +181,76 @@
       </section>
     </header>
     <!-- header end  -->
-    <main></main>
+    <main>
+      <section class="categories container p-5">
+        <h1 class="my-3">Categories</h1>
+        <div class="row g-3">
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <div
+              class="
+                d-flex
+                bg-warning
+                p-2
+                align-items-center
+                justify-content-between
+                rounded-3
+              "
+            >
+              <h1 class="text-light">Watch</h1>
+              <img
+                src="images/categories/watch.png"
+                alt=""
+                width="68"
+                height="90"
+                style="object-fit: cover"
+              />
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <div
+              class="
+                d-flex
+                bg-danger
+                p-2
+                align-items-center
+                justify-content-between
+                rounded-3
+              "
+            >
+              <h1 class="text-light">Bags</h1>
+              <img
+                src="images/categories/bag.png"
+                alt=""
+                width="68"
+                height="90"
+                style="object-fit: cover"
+              />
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <div
+              class="
+                d-flex
+                bg-primary
+                p-2
+                align-items-center
+                justify-content-between
+                rounded-3
+              "
+            >
+              <h1 class="text-light">Shoes</h1>
+              <img
+                src="images/categories/shoes.png"
+                alt=""
+                width="68"
+                height="90"
+                style="object-fit: cover"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
     <!-- bootstrap javascript added  -->
     <script
