shoes and bags section done

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     </header>
     <!-- header end  -->
     <main>
-      <section class="categories container p-5">
+      <section class="categories container">
         <h1 class="my-3">Categories</h1>
         <div class="row g-3">
           <div class="col-lg-4 col-md-6 col-sm-12">
@@ -248,6 +248,142 @@
               />
             </div>
           </div>
+        </div>
+      </section>
+      <!-- bags and shoes cards  -->
+      <section class="container">
+        <h1 class="my-3">Shoes</h1>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+          <div class="col">
+            <div class="card h-100 p-3 border-0 shadow-lg rounded-3">
+              <img
+                src="images/shoes/shoe-1.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body ">
+                <h5 class="card-title">Reebok Dart Men’s Shoes</h5>
+                <p class="card-text text-center">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint.
+                </p>
+                <h5 class="card-title text-center">$1289</h5>
+              </div>
+              <div class="mx-auto">
+                <a href="#" class="btn bg-dark text-light">Buy Now</a>
+              </div>
+            </div>
+          </div>
+          <!-- card 2  -->
+          <div class="col">
+            <div class="card h-100 p-3 border-0 shadow-lg rounded-3">
+              <img
+                src="images/shoes/shoe-2.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body ">
+                <h5 class="card-title">Reebok Pumb</h5>
+                <p class="card-text text-center">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                </p>
+                <h5 class="card-title text-center">$799</h5>
+              </div>
+              <div class="mx-auto">
+                <a href="#" class="btn bg-dark text-light">Buy Now</a>
+              </div>
+            </div>
+          </div>
+          <!-- card 3  -->
+          <div class="col">
+            <div class="card h-100 p-3 border-0 shadow-lg rounded-3">
+              <img
+                src="images/shoes/shoe-3.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body ">
+                <h5 class="card-title">Reebok All Terrain</h5>
+                <p class="card-text text-center">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint.
+                </p>
+                <h5 class="card-title text-center">$699</h5>
+              </div>
+              <div class="mx-auto">
+                <a href="#" class="btn bg-dark text-light">Buy Now</a>
+              </div>
+            </div>
+          </div>
+       
+        </div>
+      </section>
+      <!-- backpack section  -->
+      <section class="container my-3">
+        <h1 class="my-3">Backpacks</h1>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+          <div class="col">
+            <div class="card h-100 p-3 border-0 shadow-lg rounded-3">
+              <img
+                src="images/bags/bag-1.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body ">
+                <h5 class="card-title">Ison Backpack</h5>
+                <p class="card-text text-center">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint.
+                </p>
+                <h5 class="card-title text-center">$1289</h5>
+              </div>
+              <div class="mx-auto">
+                <a href="#" class="btn bg-dark text-light">Buy Now</a>
+              </div>
+            </div>
+          </div>
+          <!-- card 2  -->
+          <div class="col">
+            <div class="card h-100 p-3 border-0 shadow-lg rounded-3">
+              <img
+                src="images/bags/bag-2.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body ">
+                <h5 class="card-title">Biaowang Backpack</h5>
+                <p class="card-text text-center">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                </p>
+                <h5 class="card-title text-center">$799</h5>
+              </div>
+              <div class="mx-auto">
+                <a href="#" class="btn bg-dark text-light">Buy Now</a>
+              </div>
+            </div>
+          </div>
+          <!-- card 3  -->
+          <div class="col">
+            <div class="card h-100 p-3 border-0 shadow-lg rounded-3">
+              <img
+                src="images/bags/bag-3.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body ">
+                <h5 class="card-title">Dxyizu WS54 Smart</h5>
+                <p class="card-text text-center">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint.
+                </p>
+                <h5 class="card-title text-center">$699</h5>
+              </div>
+              <div class="mx-auto">
+                <a href="#" class="btn bg-dark text-light">Buy Now</a>
+              </div>
+            </div>
+          </div>
+       
         </div>
       </section>
     </main>
