footer section and subscribe done

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 class="card-img-top"
                 alt="..."
               />
-              <div class="card-body ">
+              <div class="card-body">
                 <h5 class="card-title">Reebok Dart Men’s Shoes</h5>
                 <p class="card-text text-center">
                   Amet minim mollit non deserunt ullamco est sit aliqua dolor do
@@ -282,10 +282,11 @@
                 class="card-img-top"
                 alt="..."
               />
-              <div class="card-body ">
+              <div class="card-body">
                 <h5 class="card-title">Reebok Pumb</h5>
                 <p class="card-text text-center">
-                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint.
                 </p>
                 <h5 class="card-title text-center">$799</h5>
               </div>
@@ -302,7 +303,7 @@
                 class="card-img-top"
                 alt="..."
               />
-              <div class="card-body ">
+              <div class="card-body">
                 <h5 class="card-title">Reebok All Terrain</h5>
                 <p class="card-text text-center">
                   Amet minim mollit non deserunt ullamco est sit aliqua dolor do
@@ -315,7 +316,6 @@
               </div>
             </div>
           </div>
-       
         </div>
       </section>
       <!-- backpack section  -->
@@ -324,12 +324,8 @@
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
           <div class="col">
             <div class="card h-100 p-3 border-0 shadow-lg rounded-3">
-              <img
-                src="images/bags/bag-1.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body ">
+              <img src="images/bags/bag-1.png" class="card-img-top" alt="..." />
+              <div class="card-body">
                 <h5 class="card-title">Ison Backpack</h5>
                 <p class="card-text text-center">
                   Amet minim mollit non deserunt ullamco est sit aliqua dolor do
@@ -345,15 +341,12 @@
           <!-- card 2  -->
           <div class="col">
             <div class="card h-100 p-3 border-0 shadow-lg rounded-3">
-              <img
-                src="images/bags/bag-2.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body ">
+              <img src="images/bags/bag-2.png" class="card-img-top" alt="..." />
+              <div class="card-body">
                 <h5 class="card-title">Biaowang Backpack</h5>
                 <p class="card-text text-center">
-                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint.
                 </p>
                 <h5 class="card-title text-center">$799</h5>
               </div>
@@ -365,12 +358,8 @@
           <!-- card 3  -->
           <div class="col">
             <div class="card h-100 p-3 border-0 shadow-lg rounded-3">
-              <img
-                src="images/bags/bag-3.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body ">
+              <img src="images/bags/bag-3.png" class="card-img-top" alt="..." />
+              <div class="card-body">
                 <h5 class="card-title">Dxyizu WS54 Smart</h5>
                 <p class="card-text text-center">
                   Amet minim mollit non deserunt ullamco est sit aliqua dolor do
@@ -383,11 +372,35 @@
               </div>
             </div>
           </div>
-       
         </div>
       </section>
+      <!-- subscribe section  -->
+      <div
+        class="
+          container
+          p-5
+          bg-warning
+          d-flex
+          align-items-center
+          justify-content-center
+          mt-5
+        "
+      >
+        <div>
+          <h1>LET'S STAY IN TOUCH</h1>
+          <p>Get updates on sales specials and more</p>
+          <input type="email" placeholder="Enter Your Email" class="p-1" />
+          <a href="#" class="btn btn-danger">Submit</a>
+        </div>
+      </div>
     </main>
-    <footer></footer>
+    <footer class="my-3 text-center">
+      <p>
+        <small
+          >©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small
+        >
+      </p>
+    </footer>
     <!-- bootstrap javascript added  -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
